[gd_scene load_steps=11 format=3 uid="uid://b5ttpkkv5yyht"]

[ext_resource type="Script" path="res://Assets/Scripts/Player.gd" id="1_fhp2n"]
[ext_resource type="Shader" path="res://Assets/Shaders/Outline/outline.gdshader" id="2_dpg3d"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_llenf"]
height = 1.2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_o4mjb"]

[sub_resource type="QuadMesh" id="QuadMesh_jno3t"]
size = Vector2(4, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2ygc4"]
render_priority = 0
shader = ExtResource("2_dpg3d")
shader_parameter/shadow_color = Color(0, 0, 0, 1)
shader_parameter/shadow_thickness = 2.0

[sub_resource type="Animation" id="Animation_1wxfw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_1sxt1"]
resource_name = "anim_player_jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0261799, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.3, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_yjhik"]
resource_name = "anim_player_land"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.3, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bbeqt"]
_data = {
"RESET": SubResource("Animation_1wxfw"),
"anim_player_jump": SubResource("Animation_1sxt1"),
"anim_player_land": SubResource("Animation_yjhik")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_fhp2n")
slideAfter = 0.6
headBobbing = false
jumpingAnims = false

[node name="CollisionCrouching" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.603116, 0)
shape = SubResource("CapsuleShape3D_llenf")

[node name="CollisionStanding" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_o4mjb")
disabled = true

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.45, 0, 0)
target_position = Vector3(0, 2, 0)

[node name="RayCast3D2" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.45, 0, 0)
target_position = Vector3(0, 2, 0)

[node name="RayCast3D3" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.450026)
target_position = Vector3(0, 2, 0)

[node name="RayCast3D4" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.45)
target_position = Vector3(0, 2, 0)

[node name="Neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Head" type="Node3D" parent="Neck"]

[node name="Eyes" type="Node3D" parent="Neck/Head"]

[node name="Camera3D" type="Camera3D" parent="Neck/Head/Eyes"]

[node name="OutlineMeshInstance" type="MeshInstance3D" parent="Neck/Head/Eyes/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.810012)
mesh = SubResource("QuadMesh_jno3t")
surface_material_override/0 = SubResource("ShaderMaterial_2ygc4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Neck/Head/Eyes"]
libraries = {
"": SubResource("AnimationLibrary_bbeqt")
}
